# navr

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_zh.md  install.ps1  install.sh
.github/workflows/: publish.yml  release.yml
examples/: config.example.toml
src/: main.rs
src/commands/: config.rs  export.rs  import.rs  jump.rs  mod.rs  open.rs
src/config/: defaults.rs  mod.rs  tests.rs
src/platform/: file_manager.rs  mod.rs
src/shell/: completions.rs  integration.rs  integration_optimized.ps1  integration_optimized.rs  mod.rs  shell_integration.rs
tests/: integration_tests.rs
